# iPlug2

./: .gitignore  _i_bubble_control_8h_source.html  _i_control_8cpp_source.html  _i_control_8h_source.html  _i_controls_8cpp_source.html  _i_controls_8h_source.html  _i_corner_resizer_control_8h_source.html  _i_f_p_s_display_control_8h_source.html  _i_graphics_8cpp_source.html  _i_graphics_8h_source.html  _i_graphics_i_o_s__view_8h_source.html  _i_graphics_im_gui_8cpp_source.html  _i_graphics_im_gui_8h_source.html  _i_graphics_lice_8h_source.html  _i_graphics_live_edit_8h_source.html  _i_graphics_mac__view_8h_source.html  _i_graphics_mac__view_8mm_source.html  _i_graphics_nano_v_g_8cpp_source.html  _i_graphics_path_base_8h_source.html  _i_graphics_skia_8cpp_source.html  _i_graphics_web_8cpp_source.html  _i_graphics_win_8cpp_source.html  _i_plug_a_p_p__dialog_8cpp_source.html  _i_plug_a_u_8cpp_source.html  _i_plug_a_uv3_8h_source.html  _i_plug_plugin_base_8cpp_source.html  _i_plug_plugin_base_8h_source.html  _i_plug_v_s_t2_8cpp_source.html  _i_plug_v_s_t3___controller_8cpp_source.html  _i_popup_menu_control_8cpp_source.html  _i_text_entry_control_8cpp_source.html  _i_text_entry_control_8h_source.html  _i_v_keyboard_control_8h_source.html  _i_v_number_box_control_8h_source.html  _i_v_preset_manager_control_8h_source.html  _i_v_scope_control_8h_source.html  _i_web_view_control_8h_source.html  _test_animation_control_8h_source.html  _test_arc_control_8h_source.html  _test_blend_control_8h_source.html  (+133 more)
Documentation/: linux.md
Examples/IPlugInstrument/: .gitignore  CMakeLists.txt  IPlugInstrument.code-workspace  IPlugInstrument.cpp  IPlugInstrument.h  Makefile
IGraphics/: IControl.cpp  IGraphics.cpp  IGraphics.h  IGraphicsEditorDelegate.cpp  (+2 more)
(+40 files in other folders)
